infra/k8s/order-postgres-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-postgres
  template:
    metadata:
      labels:
        app: order-postgres
    spec:
      containers:
        - name: order-postgres
          image: postgres:14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: orderdata
      volumes:
        - name: orderdata
          persistentVolumeClaim:
            claimName: order-postgres-volume-claim


---
apiVersion: v1
kind: Service
metadata:
  name: order-postgres-srv
  labels:
    app: order-postgres
spec:
  selector:
    app: order-postgres
  ports:
    - port: 5432
