infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tickethub.dev
      http:
        paths:

          # - path: /api/otpass?(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: otpass-srv
          #       port:
          #         number: 4000
                  
          - path: /api/users?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
          - path: /api/tickets?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ticket-srv
                port:
                  number: 5000
